--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,29 @@
-/src/ionioPackage/
-/src/javaConcurrency/
-/src/javaSynchronization/
-/src/javaThreadPool/
-/src/MultiThreading/
-/src/regex/
-/src/synchronousProgramming/
-/src/VaqtlarBilanIshlash/
+### IntelliJ IDEA ###
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
+### Eclipse ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
+### VS Code ###
+.vscode/
+
+### Mac OS ###
+.DS_Store
